Agrego los endpoints para obtener las series calibradas/observadas/curadas
