# docs/swagger.json
@@ -84,6 +84,22 @@
                 }
             }
         },
+        "/series/curadas/{serie_id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Endpoint para obtener los valores de una serie curada por id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StreamsDataResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/series/estaciones": {
             "get": {
                 "produces": [
@@ -95,6 +111,38 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.StreamsPerStationResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/series/observadas/{serie_id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Endpoint para obtener los valores de una serie observada por id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.StreamsDataResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/series/pronosticadas/{calibrado_id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Endpoint para obtener los valores de una serie pronosticadas por id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.CalibratedStreamsDataResponse"
                         }
                     }
                 }
@@ -118,6 +166,55 @@
         }
     },
     "definitions": {
+        "dtos.CalibratedStreamsData": {
+            "type": "object",
+            "properties": {
+                "qualifier": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "dtos.CalibratedStreamsDataResponse": {
+            "type": "object",
+            "properties": {
+                "mainStreams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.CalibratedStreamsData"
+                    }
+                },
+                "p05Streams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.CalibratedStreamsData"
+                    }
+                },
+                "p25Streams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.CalibratedStreamsData"
+                    }
+                },
+                "p75Streams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.CalibratedStreamsData"
+                    }
+                },
+                "p95Streams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.CalibratedStreamsData"
+                    }
+                }
+            }
+        },
         "dtos.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -154,6 +251,28 @@
                 },
                 "totalStreams": {
                     "type": "integer"
+                }
+            }
+        },
+        "dtos.StreamsData": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "dtos.StreamsDataResponse": {
+            "type": "object",
+            "properties": {
+                "streams": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dtos.StreamsData"
+                    }
                 }
             }
         },
